--- a/styles/style.css
+++ b/styles/style.css
@@ -85,7 +85,7 @@ h2 {
 /********* MENU ********/
 
 nav {
-  width: 960px;
+  width: 940px;
   margin: auto;
   text-align: center;
 }
@@ -99,7 +99,7 @@ nav .menu ul li {
   padding: 20px;
 }
 
-nav .menu ul li a {
+nav .menu ul li .classUnderLine {
   text-decoration: none;
   color: #FFFFFF;
   font-family: 'Libre Baskerville', serif;
@@ -107,16 +107,16 @@ nav .menu ul li a {
   padding-top: 15px;
 }
 
-nav .menu ul li a:focus,
-a:hover {
+nav .menu ul li .classUnderLine:focus,
+.classUnderLine:hover {
   color: #FFFFFF;
   display: inline;
   -webkit-transition: 0.9s;
   transition: 0.9s;
 }
 
-nav .menu ul li a::after,
-a::after {
+nav .menu ul li .classUnderLine::after,
+.classUnderLine::after {
   color: #FFFFFF;
   display: block;
   width: 0px;
@@ -129,8 +129,8 @@ a::after {
   transition: all ease-in 0.5s
 }
 
-nav .menu ul li a:focus::after,
-a:hover::after {
+nav .menu ul li .classUnderLine:focus::after,
+.classUnderLine:hover::after {
   color: #FFFFFF;
   display: block;
   width: 100px;
