--- a/styles/style.css
+++ b/styles/style.css
@@ -64,6 +64,7 @@ h2 {
   left: 40px;
   color: #CC76CA;
 }
+
 #header .tel_header img {
   width: 20px;
   position: absolute;
@@ -172,10 +173,11 @@ a {
 
 **********************/
 
-.bodyIndex{
+.bodyIndex {
   background: url('../images/bgIndex.png') no-repeat white;
   background-size: contain;
 }
+
 
 /***** SLIDER ******/
 
@@ -277,24 +279,27 @@ a {
   border-radius: 2px;
 }
 
-.firstTextHome{
+.firstTextHome {
   margin-left: 20px;
   margin-top: 40px;
 }
 
-.firstTextHome h2{
+.firstTextHome h2 {
   font-size: 14px;
   text-align: center;
 }
 
-.secondTextHome{
+.secondTextHome {
   margin-top: 160px;
 }
+
+
 /****** VIDEO ******/
 
-.videoHome{
+.videoHome {
   margin-top: 180px;
 }
+
 
 /***** CONTACT *****/
 
@@ -309,7 +314,7 @@ a {
   background-color: #FFFFFF;
 }
 
-.contactHome h2{
+.contactHome h2 {
   padding-bottom: 20px;
   padding-top: 5px;
 }
@@ -383,37 +388,65 @@ footer .row {
 
 **********************/
 
-#kitchen .firstPictureKitchen {
-  width: 90%;
-  margin: 60px;
+.bodyKitchen {
+  background: url(../images/backgroundKitchen.jpg) no-repeat white;
+  background-size: contain;
+  width: 100%;
 }
 
-#kitchen .firstTextKitchen,
-.secondTextKitchen {
-  background-color: #FFFFFF;
-  color: #222222;
-  text-align: justify;
-  padding: 35px 45px;
+.firstPictureKitchen {
+  width: 90%;
+  margin-top: 60px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto
+}
+
+
+}
+.firstPictureKitchen img {
   border-radius: 2px;
 }
-
-#kitchen .firstTextKitchen {
-  margin: 60px 30px;
+.firstTextKitchen,
+.secondTextKitchen {
+  width: 90%;
+  background-color: #FFFFFF;
+  color: #222222;
+  padding: 30px;
+  text-align: justify;
+  border-radius: 2px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
-
-#kitchen .secondTextKitchen {
+.firstTextKitchen {
+  border: #CC76CA solid 2px;
+  border-radius: 2px;
+  margin-top: 60px;
+}
+.secondTextKitchen {
+  margin-top: 200px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.large-7 .secondPictureKitchen .spkImg1 {
   margin-top: 150px;
+  margin-left: 10%;
+  width: 40%;
 }
-
-#kitchen .secondPictureKitchen img {
-  width: 45%;
-  margin: 40px;
+.medium-12 .secondPictureKitchen .spkImg1 {
+  margin-top: 10px;
+  margin-left: 10%;
+  margin-bottom: 10px;
+  width: 40%;
 }
-
-#kitchen .secondPictureKitchen .spkImg2 {
-  margin-left: 190px;
+.spkImg2 {
+  margin-top: 10px;
+  margin-bottom: 20px;
+  margin-left: 50%;
+  width: 40%;
 }
-
 
 /******************
 
@@ -422,16 +455,13 @@ footer .row {
 
 
 ********************/
-.bodyEnvironment{
+.bodyEnvironment {
   background: url('../images/bgEnvironment.png') no-repeat white;
   background-size: contain;
 }
-
-.firstPictureEnvironment{
-margin-top: 250px;
+.firstPictureEnvironment {
+  margin-top: 250px;
 }
-
-
 .firstTextEnvironment,
 .secondTextEnvironment,
 .thirdTextEnvironment {
@@ -441,25 +471,22 @@ margin-top: 250px;
   padding: 35px 45px;
   border-radius: 2px;
 }
-
 .firstTextEnvironment {
   width: 600px;
   margin: auto;
   margin-top: 60px;
 }
-
-.firstTextEnvironment h2{
+.firstTextEnvironment h2 {
   padding-bottom: 20px;
   text-align: center;
 }
-
-.secondTextEnvironment{
+.secondTextEnvironment {
   margin-top: 100px;
 }
-
-.secondPictureEnvironment{
+.secondPictureEnvironment {
   margin-top: 60px;
 }
+
 /***********************
 
 
@@ -467,13 +494,26 @@ margin-top: 250px;
 
 
 ***********************/
-
+.bodyContact {
+  background: url(../images/backgroundContact.jpg) no-repeat white;
+  background-size: contain;
+}
 .firstTextContact {
   border: #CC76CA solid 2px;
-  border-radius: 10px;
+  border-radius: 2px;
   text-align: center;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  margin-top: 90px;
+  margin-bottom: 90px;
   height: 400px;
   background-color: #FFFFFF;
+  width: 100%;
 }
+.googleContact {
+  margin-top: 90px;
+  width: 100%;
+}
+.firstImageContact {
+  margin-top: 90px;
+  margin-bottom: 90px;
+}
+.second
