--- a/styles/style.css
+++ b/styles/style.css
@@ -352,17 +352,13 @@ footer .row {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   text-align: center;
+  height: 50px;
 }
 
-.footerCss .imgfootera {
-  text-decoration: none;
+footer img{
+  width: 40px;
   display: inline-block;
-}
-
-.leftFooter img {
-  width: 15%;
-  text-decoration: none;
-  text-align: center;
+  margin: 5px;
 }
 
 
@@ -485,6 +481,9 @@ footer .row {
 }
 .secondPictureEnvironment {
   margin-top: 60px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /***********************
@@ -516,4 +515,33 @@ footer .row {
   margin-top: 90px;
   margin-bottom: 90px;
 }
-.second
+.contactHome {
+  border: #CC76CA solid 2px;
+  border-radius: 2px;
+  text-align: center;
+  margin-top: 130px;
+  margin-bottom: 20px;
+  padding: 30px;
+  height: 400px;
+  background-color: #FFFFFF;
+}
+
+.contactHome h2 {
+  padding-bottom: 20px;
+  padding-top: 5px;
+}
+
+.mapHome {
+  margin-top: 130px;
+  margin-bottom: 20px;
+  margin-left: 20px;
+}
+
+.contactHome h4 {
+  color: #CC76CA;
+  font-style: italic;
+}
+
+.contactHome .contactPhoneHome {
+  font-size: 16px;
+}
