--- a/styles/style.css
+++ b/styles/style.css
@@ -476,12 +476,50 @@ footer img {
 
 
 **********************/
-
-#menusAndVine img {
-  margin: 0;
-  padding: 0;
+.bodyMenu{
+  background: url(../images/parquet.jpg) no-repeat white;
+  background-size: cover;
 }
 
+.menusAndVine {
+  margin-left: 5px;
+}
+.menusAndVine img {
+    width: 25%;
+    max-width: 480px;
+    height: 100%;
+    float: left;
+    position: relative;
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-color: #ffffff;
+}
+
+.menusAndVine p{
+    position: absolute;
+    top: 35%;
+    width: 100%;
+    text-align: center;
+}
+
+.menusAndVine .menu1 .textMenu1 {
+  left: 10%;
+}
+.menusAndVine .menu2 .textMenu2 {
+  left: 40%;
+}
+.menusAndVine .menu3 .textMenu3 {
+  left: 70%;
+}
+.menusAndVine .menu4 .textMenu4 {
+  left: 100%;
+}
+
+
+.bodyMenu footer{
+  width: 960px;
+  margin: auto;
+}
 
 /*******************
 
