--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,9 @@ h2 {
   text-align: center;
 }
 
+.clearBoth{
+  clear: both;
+}
 
 /*********************
 
@@ -482,9 +485,13 @@ footer img {
 }
 
 .menusAndVine {
-  margin-left: 5px;
+  width: 960px;
+  margin: auto;
+  position: relative;
 }
-.menusAndVine img {
+
+.menusAndVine .menu1 {
+    background-image: url(../images/menu1.jpg);
     width: 25%;
     max-width: 480px;
     height: 100%;
@@ -495,26 +502,16 @@ footer img {
     background-color: #ffffff;
 }
 
-.menusAndVine p{
+.menusAndVine .textMenu1 {
     position: absolute;
     top: 35%;
     width: 100%;
     text-align: center;
 }
 
-.menusAndVine .menu1 .textMenu1 {
-  left: 10%;
+.menusAndVine pa[class^="text-"]{
+  float: left;
 }
-.menusAndVine .menu2 .textMenu2 {
-  left: 40%;
-}
-.menusAndVine .menu3 .textMenu3 {
-  left: 70%;
-}
-.menusAndVine .menu4 .textMenu4 {
-  left: 100%;
-}
-
 
 .bodyMenu footer{
   width: 960px;
