--- a/styles/style.css
+++ b/styles/style.css
@@ -32,7 +32,7 @@ h2 {
 /*********************
 
 
-        HEADER
+HEADER
 
 
 **********************/
@@ -173,7 +173,7 @@ a {
 /*******************
 
 
-      HOME PAGE
+HOME PAGE
 
 
 **********************/
@@ -438,7 +438,7 @@ a {
 /********************
 
 
-        FOOTER
+FOOTER
 
 
 ********************/
@@ -475,7 +475,7 @@ footer img {
 /*******************
 
 
-    MENUS & VINE
+MENUS & VINE
 
 
 **********************/
@@ -499,73 +499,74 @@ footer img {
 }
 
 .menusAndVine .menu1 {
-    width: 25%;
-    max-width: 480px;
-    height: 100%;
-    float: left;
-    position: relative;
-    background-position: center top;
-    background-repeat: no-repeat;
-    background-color: #ffffff;
+  width: 25%;
+  max-width: 480px;
+  height: 100%;
+  float: left;
+  position: relative;
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-color: #ffffff;
 }
 
 .menusAndVine .textMenu1 {
-    position: absolute;
-    top: 35%;
-    width: 100%;
-    text-align: center;
-    
+  position: absolute;
+  top: 35%;
+  width: 100%;
+  text-align: center;
 }
+
+
 .menusAndVine .menu2 {
-    width: 25%;
-    max-width: 480px;
-    height: 100%;
-    float: left;
-    position: relative;
-    background-position: center top;
-    background-repeat: no-repeat;
-    background-color: #ffffff;
+  width: 25%;
+  max-width: 480px;
+  height: 100%;
+  float: left;
+  position: relative;
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-color: #ffffff;
 }
 
 .menusAndVine .textMenu2 {
-    position: absolute;
-    top: 35%;
-    width: 100%;
-    text-align: center;
+  position: absolute;
+  top: 35%;
+  width: 100%;
+  text-align: center;
 }
 .menusAndVine .menu3 {
-    width: 25%;
-    max-width: 480px;
-    height: 100%;
-    float: left;
-    position: relative;
-    background-position: center top;
-    background-repeat: no-repeat;
-    background-color: #ffffff;
+  width: 25%;
+  max-width: 480px;
+  height: 100%;
+  float: left;
+  position: relative;
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-color: #ffffff;
 }
 
 .menusAndVine .textMenu3 {
-    position: absolute;
-    top: 35%;
-    width: 100%;
-    text-align: center;
+  position: absolute;
+  top: 35%;
+  width: 100%;
+  text-align: center;
 }
 .menusAndVine .menu4 {
-    width: 25%;
-    max-width: 480px;
-    height: 100%;
-    float: left;
-    position: relative;
-    background-position: center top;
-    background-repeat: no-repeat;
-    background-color: #ffffff;
+  width: 25%;
+  max-width: 480px;
+  height: 100%;
+  float: left;
+  position: relative;
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-color: #ffffff;
 }
 
 .menusAndVine .textMenu4 {
-    position: absolute;
-    top: 35%;
-    width: 100%;
-    text-align: center;
+  position: absolute;
+  top: 35%;
+  width: 100%;
+  text-align: center;
 }
 
 .bodyMenu footer{
@@ -573,10 +574,27 @@ footer img {
   margin: auto;
 }
 
+.openMenu{
+  text-align: center;
+  background: #FFFFFF;
+  width: 420px;
+  margin-left: 245px;
+  height: 425px;
+  position: relative;
+  display: none;
+}
+
+.openMenu p{
+  vertical-align: middle;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 5;
+}
 /*******************
 
 
-  KITCHEN & TAKEAWAY
+KITCHEN & TAKEAWAY
 
 
 **********************/
@@ -640,7 +658,7 @@ footer img {
     margin-top: 40px;
     padding: 15px;
   }
-  
+
   .secondTextKitchen {
     margin-top: 40px;
     display: block;
@@ -648,13 +666,13 @@ footer img {
     margin-right: auto;
     padding: 15px;
   }
-  
+
   .spkImg1 {
     margin-top: 30px;
     margin-left: 15%;
     width: 30%;
   }
-  
+
   .spkImg2 {
     margin-top: 10px;
     margin-bottom: 20px;
@@ -669,7 +687,7 @@ footer img {
     margin-top: 60px;
     padding: 15px;
   }
-  
+
   .secondTextKitchen {
     margin-top: 180px;
     display: block;
@@ -677,13 +695,13 @@ footer img {
     margin-right: auto;
     padding: 30px;
   }
-  
+
   .spkImg1 {
     margin-top: 150px;
     margin-left: 10%;
     width: 40%;
   }
-  
+
   .spkImg2 {
     margin-top: 10px;
     margin-bottom: 20px;
@@ -695,7 +713,7 @@ footer img {
 /******************
 
 
-    ENVIRONMENT
+ENVIRONMENT
 
 
 ********************/
@@ -746,7 +764,7 @@ footer img {
     margin-left: auto;
     margin-right: auto;
   }
-  
+
   .firstTextEnvironment,
   .secondTextEnvironment,
   .thirdTextEnvironment {
@@ -756,21 +774,21 @@ footer img {
     padding: 20px 30px;
     border-radius: 2px;
   }
-  
+
   .firstTextEnvironment {
     width: 90%;
     margin-top: 90px;
   }
-  
+
   .firstTextEnvironment h2 {
     padding-bottom: 20px;
     text-align: center;
   }
-  
+
   .secondTextEnvironment {
     margin-top: 90px;
   }
-  
+
   .secondPictureEnvironment {
     margin-top: 90px;
   }
@@ -783,7 +801,7 @@ footer img {
     margin-left: auto;
     margin-right: auto;
   }
-  
+
   .firstTextEnvironment,
   .secondTextEnvironment,
   .thirdTextEnvironment {
@@ -793,21 +811,21 @@ footer img {
     padding: 20px 30px;
     border-radius: 2px;
   }
-  
+
   .firstTextEnvironment {
     width: 90%;
     margin-top: 90px;
   }
-  
+
   .firstTextEnvironment h2 {
     padding-bottom: 20px;
     text-align: center;
   }
-  
+
   .secondTextEnvironment {
     margin-top: 90px;
   }
-  
+
   .secondPictureEnvironment {
     margin-top: 90px;
   }
@@ -816,7 +834,7 @@ footer img {
 /***********************
 
 
-  CONTACT & PARTNER
+CONTACT & PARTNER
 
 
 ***********************/
