--- a/styles/style.css
+++ b/styles/style.css
@@ -25,9 +25,10 @@ h2 {
   text-align: center;
 }
 
-.clearBoth{
+.clearBoth {
   clear: both;
 }
+
 
 /*********************
 
@@ -179,7 +180,7 @@ HOME PAGE
 **********************/
 
 .bodyIndex {
-  background: url('../images/bgIndex.png') no-repeat white;
+  background: url('../images/backgroundIndex.jpg') no-repeat white;
   background-size: contain;
 }
 
@@ -479,7 +480,8 @@ MENUS & VINE
 
 
 **********************/
-.bodyMenu{
+
+.bodyMenu {
   background: url(../images/parquet.jpg) no-repeat white;
   background-size: cover;
 }
@@ -492,7 +494,7 @@ MENUS & VINE
 
 .menusAndVine p {
   padding: 10px;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0, 0, 0, 0.5);
   color: #FFFFFF;
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
@@ -534,6 +536,7 @@ MENUS & VINE
   width: 100%;
   text-align: center;
 }
+
 .menusAndVine .menu3 {
   width: 25%;
   max-width: 480px;
@@ -551,6 +554,7 @@ MENUS & VINE
   width: 100%;
   text-align: center;
 }
+
 .menusAndVine .menu4 {
   width: 25%;
   max-width: 480px;
@@ -569,7 +573,7 @@ MENUS & VINE
   text-align: center;
 }
 
-.bodyMenu footer{
+.bodyMenu footer {
   width: 960px;
   margin: auto;
 }
@@ -718,7 +722,7 @@ ENVIRONMENT
 
 ********************/
 .bodyEnvironment {
-  background: url('../images/bgEnvironment.png') no-repeat white;
+  background: url('../images/backgroundEnvironment.jpg') no-repeat white;
   background-size: contain;
 }
 .firstPictureEnvironment {
@@ -885,4 +889,25 @@ CONTACT & PARTNER
   .firstTextContact {
     margin-top: 100px;
   }
+}
+
+/***********************
+
+
+  LEGAL MENTIONS
+
+
+***********************/
+.backgroundLegal {
+  background: url(../images/backgroundLegal.jpg) no-repeat white;
+}
+.textLegal {
+  background-color: #FFFFFF;
+  color: #222222;
+  text-align: justify;
+  padding: 20px 30px;
+  border-radius: 2px;
+  width: 90%;
+  display: block;
+  margin: 30px auto 0px auto;
 }
